# natrix_interpreter

./: CMakeLists.txt  README.md  bytecode_debug.c  bytecode_debug.h  dynamic_array.c  dynamic_array.cpp  dynamic_array.h  errors.c  errors.cpp  errors.h  interpreter.c  interpreter.cpp  interpreter.h  main.c  main.cpp  namespace.c  namespace.h  native_dict.c  native_dict.h  natrix.h  natrix_object.c  natrix_object.cpp  natrix_object.h  todo.md
